mongodb/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: roboshop
  # these are replica set labels
  labels:
    project: roboshop
    component: mongodb
    tier: db
spec:
  replicas: 1
  selector:
    # these labels are used to select pods
    matchLabels:
      project: roboshop
      component: mongodb
      tier: db
  # pod definition
  template:
    metadata:
      labels:
        project: roboshop
        component: mongodb
        tier: db
    spec:
      containers:
      - name: mongodb
        image: umadevops008/mongodb:v1
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 5
